# Media-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.md  docs.md  entrypoint.sh  pyproject.toml  todo.md
desktop/: CMakeLists.txt  main.cpp
desktop/MediaServerClient/: AddDirectoryCard.qml  CMakeLists.txt  DirectoryRow.qml  HistoryScreen.qml  LandscapeCard.qml  LibraryScreen.qml  Main.qml  MediaCard.qml  MovieDetailScreen.qml  MpvItem.cpp  MpvItem.h  NetworkManager.js  PlayerControls.qml  PlayerScreen.qml  SettingsScreen.qml  ShowDetailScreen.qml  Theme.qml  main.cpp
docs/: backend.md  desktop-app.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: ContinueWatching.tsx  MediaGrid.tsx  MovieDetails.tsx  MovieGrid.tsx  ShowDetails.tsx  VideoPlayer.tsx
frontend/src/components/icons/: CheckCircle.tsx
src/: database.py  db_models.py  dependencies.py  docker-compose.yml  init_db.py  main.py  metadata.py  scanner.py  tmdb_client.py
src/alembic/: env.py
src/alembic/versions/: 199dd99e0bc2_add_scandirectory_model.py  39d2d221ec7b_add_availability_boolean_for_files_.py  3bca5f0364f3_add_indexes_and_cascading_deletes_to_.py  aad116581d78_add_has_ever_completed_to_watch_progress.py  ebbf367ccff0_initial_migration.py  ebcd18f9758b_initial_migration.py
src/api/: dependencies.py
src/api/routes/: movies.py  progress.py  shows.py  stream.py
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/routes/: history.py  movies.py  progress.py  scanner.py  shows.py  stream.py
src/app/core/: database.py
src/app/mappers/: progress_mapper.py
src/app/models/: media.py  user.py
src/app/schemas/: movies.py  progress.py  scanner.py  shows.py
src/app/services/: availability_service.py  history_service.py  metadata_service.py  movie_service.py  progress_service.py  scanner_service.py  show_service.py  stream_service.py
src/app/utils/: datetime.py  metadata.py  progress.py  video.py
src/core/: database.py
src/mappers/: progress_mapper.py
src/models/: media.py  user.py
src/schemas/: movies.py  progress.py  shows.py
src/services/: movie_service.py  progress_service.py  scanner_service.py  show_service.py  stream_service.py  tmdb_client.py
src/utils/: progress.py
