[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "media-server"
version = "0.1.0"
description = "A custom media server backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic-settings",
    "httpx",
    "parse-torrent-title",
    "ffmpeg-python",
    "aiofiles"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-bugbear]
# Allow FastAPI Depends() as a default argument
extend-immutable-calls = ["Depends", "fastapi.Depends"]

[tool.alembic]
script_location = "src/alembic"
prepend_sys_path = ["."]
# Leave the URL blank here because we inject it securely in env.py
sqlalchemy.url = ""